--- a/Usability/css/estilos.css
+++ b/Usability/css/estilos.css
@@ -28,7 +28,9 @@
   .icon-menu:before {
     content: "\e900";
   }
-
+*{
+    margin: 0;
+}
 html {    
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -108,6 +110,10 @@ html {
 }
 .experience-container h3{
     text-align: center;
+    padding: 10px 0;
+}
+.experience-container p {
+    margin: 10px 0;
 }
 .sentence-img-container{
     display: flex;
@@ -142,7 +148,8 @@ html {
 }
 
 .contact h2{
-    color: #0E3150;    
+    color: #0E3150;   
+    margin: 10px 0; 
 }
 .form-and-social{
     display: flex;
@@ -312,6 +319,7 @@ html {
     .experience-container{
         height: 100%;
     }
+   
     .sentence-img-container p{
         /* width: 55%; */
         padding: 0 1%;
@@ -320,6 +328,9 @@ html {
         width: 30%;
         padding: 0 10% 0 0;
     } */
+    .contact{
+        margin: 0 1em 1em;
+    }
 }
 
 @media screen and (max-width: 767px) {
