--- a/Web-development/css/estilos.css
+++ b/Web-development/css/estilos.css
@@ -266,7 +266,7 @@ html {
         margin: 0 0 0 230px;
     } */
     .hero {
-        height: 100px;   
+        height: 200px;   
         position: relative;   
         overflow: hidden;
         padding: 2em;  
@@ -298,7 +298,7 @@ html {
     }
 }
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: 768px){
     h2 {
         font-size: 1.2em;
     }
@@ -341,6 +341,12 @@ html {
     }
     .header .logo{
         text-align: center;
+    }
+    .hero{
+        height: 9em;
+    }
+    .hero-sentence {
+        top: 45px;
     }
     .experience {
         padding: 15px;
@@ -455,7 +461,7 @@ html {
         font-size: 1.2em;        
     }
     .hero{
-        padding: 2em 1em;
+        padding: 2em 1em;        
     }
     .experience-container {
         border: 10px solid #F7E9E3;
