--- a/Web-development/css/estilos.css
+++ b/Web-development/css/estilos.css
@@ -99,12 +99,14 @@ html {
     background-color: #6DC9C8;
     margin: 0;
     padding: 15px 0;
+    height: 350px;
+    display: flex;
 }
 .experience-container {    
     border: 15px solid #F7E9E3;
     max-width: 900px;
     /* height: 300px; */
-    margin: 0 auto 10px;
+    margin: auto;
     background-color: white;
     box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.60);   
 }
@@ -288,10 +290,10 @@ html {
         color: white;
     }
     .experience {
-        padding: 15px;
+        padding: 15px;        
     }
     .experience-container{
-        height: 100%;
+        /* height: 100%; */
     }
     .contact {
         margin: 0 1em 1em;
@@ -350,6 +352,7 @@ html {
     }
     .experience {
         padding: 15px;
+        
     }
     /* .experience-image{
         margin: 0 auto;
@@ -398,6 +401,8 @@ html {
     }
     .experience {
         padding: 15px;
+        height: auto;
+        display: block;
     }
     .experience-container{
         font-size: 16px;
