--- a/css/estilos.css
+++ b/css/estilos.css
@@ -288,7 +288,7 @@ body{
 .experience-description {
     margin-bottom: 10px;
 }
-.experience-button{
+.experience-button1{
     background-color: #0E3150 ;
     color: white;
     border: 1px solid #0E3150;
@@ -299,10 +299,154 @@ body{
     margin: 0 auto 15px;  
     box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.60);     
 }
-.experience-button a{
+.experience-button2{
+    background-color: #0E3150 ;
+    color: white;
+    border: 1px solid #0E3150;
+    /* padding: 5px 20px; */
+    border-radius: 5px;
+    width: 100px;
+    text-transform: uppercase;
+    margin: 0 auto 15px;  
+    box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.60);     
+}
+.experience-button3{
+    background-color: #0E3150 ;
+    color: white;
+    border: 1px solid #0E3150;
+    /* padding: 5px 20px; */
+    border-radius: 5px;
+    width: 100px;
+    text-transform: uppercase;
+    margin: 0 auto 15px;  
+    box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.60);     
+}
+.experience-button4{
+    background-color: #0E3150 ;
+    color: white;
+    border: 1px solid #0E3150;
+    /* padding: 5px 20px; */
+    border-radius: 5px;
+    width: 100px;
+    text-transform: uppercase;
+    margin: 0 auto 15px;  
+    box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.60);     
+}
+.experience-button1 a{
     text-decoration: none;
     color: white;
 }
+.experience-button2 a{
+    text-decoration: none;
+    color: white;
+}
+.experience-button3 a{
+    text-decoration: none;
+    color: white;
+}
+.experience-button4 a{
+    text-decoration: none;
+    color: white;
+}
+.hidden {
+    display: none;
+}
+.visible {
+    display: grid;
+}
+.modal1 {
+    width: 100%;
+    height: 1400px;
+    background:rgba(0, 0, 0, 0.6);
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 4;
+    /*display: grid;*/
+    place-items: center;
+}
+.modal2 {
+    width: 100%;
+    height: 1400px;
+    background:rgba(0, 0, 0, 0.6);
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 4;
+    /*display: grid;*/
+    place-items: center;
+}
+.modal3 {
+    width: 100%;
+    height: 1400px;
+    background:rgba(0, 0, 0, 0.6);
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 4;
+    /*display: grid;*/
+    place-items: center;
+}
+.modal4 {
+    width: 100%;
+    height: 1400px;
+    background:rgba(0, 0, 0, 0.6);
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 4;
+    /*display: grid;*/
+    place-items: center;
+}
+.modal-container{
+    background: white;
+    border: 15px solid #F7E9E3;
+    width: 50%;
+    height: auto;
+    border-radius: 8px;       
+}
+.modal-container ul{
+    text-align: left;
+    margin: 6px;
+}
+.modal-container-close1{
+    position: absolute;
+    right: 25%;
+}
+.modal-container-close2{
+    position: absolute;
+    right: 25%;
+}
+.modal-container-close3{
+    position: absolute;
+    right: 25%;
+}
+.modal-container-close4{
+    position: absolute;
+    right: 25%;
+}
+.experience-title-internal{
+    padding: 2%;
+}
+
+.experience-description-internal{
+    text-align: left;
+    padding: 0.5% 3%;
+}
+
+.experience-description-internal:last-child{
+    padding-bottom: 2%;
+}
+
+.modal-container h4 {
+    text-align: left;
+    padding: 0.5% 3%;
+}
+
 .skills{
     display: flex;
     margin: 0 10%;
@@ -516,6 +660,18 @@ body{
     /* .contact-button {
         margin: 0 0 0 230px;
     } */
+    .modal1 {        
+        height: 1750px;
+    }
+    .modal2 {        
+        height: 1750px;
+    }
+    .modal3 {        
+        height: 1750px;
+    }
+    .modal4 {        
+        height: 1750px;
+    }
     .contact {
         padding: 1.2em;
     }
@@ -625,6 +781,22 @@ body{
     }   
     .experience-description {
         font-size: .9em;
+    }
+    .modal-container {
+        width: 80%;
+        font-size: .9em;
+    }
+    .modal-container-close1{
+        right: 10%;       
+    }
+    .modal-container-close2{
+        right: 10%;       
+    }
+    .modal-container-close3{
+        right: 10%;       
+    }
+    .modal-container-close4{
+        right: 10%;       
     }
     .skills {
         font-size: .9em;
@@ -753,6 +925,18 @@ body{
     }
     .WhatIlovetodo{
         margin-top: 2em;
+    }
+    .modal1 {        
+        height: 2000px;
+    }
+    .modal2 {        
+        height: 2000px;
+    }
+    .modal3 {        
+        height: 2000px;
+    }
+    .modal4 {        
+        height: 2000px;
     }
 
 }
